--- a/style.css
+++ b/style.css
@@ -114,12 +114,12 @@ div .row h2 {
   box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 6px 0px rgba(0, 0, 0, 0.2) 0px 1px 1px
     0px;
   color: hsl(0, 0%, 100%);
-  display: inline-block;
+  display: block;
   font-size: 22px;
   line-height: 22px;
   margin: 16px 16px 16px 20px;
   padding: 14px 34px;
-  text-align: center;
+  /* text-align: center; */
   cursor: pointer;
 }
 
@@ -142,7 +142,7 @@ button[disabled] {
   width: 100%;
   resize: none;
   overflow: hidden;
-  font-size: 24px;
+  font-size: 18px;
 }
 
 @media (max-width: 690px) {
